--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Sobre PPGEco Seminários</title>
-		<meta charset="ISO-8859-15" />
+		<title>Sobre PPGEco SeminÃ¡rios</title>
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">PPGEco Seminários</a>
+				<a class="logo" href="index.html">PPGEco SeminÃ¡rios</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -42,7 +42,7 @@
 				<div class="inner">
 					<div class="content">
 						<header>
-						  <p>Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  são realizados às Quintas-feiras (15:30hs), na sala SIGP 08 (Bloco A), onde se concentram as instalações do Programa.</p>
+						  <p>Os seminÃ¡rios do PPGEco apresentam artigos acadÃªmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  sÃ£o realizados Ã s Quintas-feiras (15:30hs), na sala SIGP 08 (Bloco A), onde se concentram as instalaÃ§Ãµes do Programa.</p>
 						</header>
 					</div>
 				</div>
@@ -74,7 +74,7 @@
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; PPGEco Seminários 2021.
+						&copy; PPGEco SeminÃ¡rios 2021.
 					</div>
 				</div>
 			</footer>
