--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Sobre PPGEco Semin·rios</title>
-		<meta charset="UTF-8" />
+		<title>Sobre PPGEco Semin√°rios</title>
+		<meta charset="iso-8859-1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">PPGEco Semin·rios</a>
+				<a class="logo" href="index.html">PPGEco Semin√°rios</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -27,7 +27,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#prox">PrÛximos Eventos</a></li>
+					<li><a href="index.html#prox">Pr√≥ximos Eventos</a></li>
 					<li><a href="index.html#cta">Eventos Anteriores</a></li>
 					<!-- <li><a href="elements.html">Elements</a></li> -->
 					<li><a href="about.html">Sobre</a></li>
@@ -44,7 +44,7 @@
 				<div class="inner">
 					<div class="content">
 						<header>
-						  <p>Os semin·rios do PPGEco apresentam artigos acadÍmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  s„o realizados ‡s Quintas-feiras (15:30hs), na sala SIGP 08 (Bloco A), onde se concentram as instalaÁıes do Programa.</p>
+						  <p>Os semin√°rios do PPGEco apresentam artigos acad√™micos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  s√£o realizados √†s Quintas-feiras (15:30hs), na sala SIGP 08 (Bloco A), onde se concentram as instala√ß√µes do Programa.</p>
 						</header>
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; PPGEco Semin·rios 2021.
+						&copy; PPGEco Semin√°rios 2021.
 					</div>
 				</div>
 			</footer>
