--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2>Organização</h2>
-						<p>João Frois Caldeira
+						<p>João F Caldeira
 					</header>
 					
 					
