--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="inner">
 					<div class="content">
 						<header>
-						  <p>Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  são realizados às Quintas-feiras (15:30hs), na sala SIGP 08 (Bloco A), onde se concentram as instalações do Programa.</p>
+						  <p>Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  são realizados às Sextas-feiras (15:00hs), na sala SIGP 08 (Bloco A), onde se concentram as instalações do Programa.</p>
 						</header>
 					</div>
 				</div>
