--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<p><b>Autores:</b> Igor Bastos Cavaca, Roberto Meurer (PPGEco-UFSC)
                 <br><b>Data:</b> 27 de Agosto (Sexta-feira), 2021
                 <br><b>Horário:</b> 15:00hs
-                <br><a href="about:blank">Link</a></p>
+                <br><a href="https://meet.google.com/ohb-zpsk-kun?authuser=1">Link</a></p>
 								<p style="text-align:left;">
 								<h3>Sobre o Autor</h3>
 								<p>Warren Brasil
