--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					  <section>
 							<div class="content">
 								<img src="images/philipp_ehrl.jpg" alt="Trulli" width="200" height="170" style="float:left; padding-right: 10px;"/>
-								<h3><b><a href="seminariosppgeco.github.io/papers/Ribas_Ehrl.pdf" target="_blank">Cultural Productivity and Short-Term Financial Commitment<i class="icon fa-link">&nbsp;</i></a></b></h3>
+								<h3><b><a href="https://seminariosppgeco.github.io/papers/Ribas_Ehrl.pdf" target="_blank">Cultural Productivity and Short-Term Financial Commitment<i class="icon fa-link">&nbsp;</i></a></b></h3>
 								<p><b>Autores:</b> Philipp Ehrl, Rafael P. Ribas (University of Amsterdam)
                 <br><b>Data:</b> 03 de Setembro (Sexta-feira), 2021
                 <br><b>Horário:</b> 15:00hs
