--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<br><b>Formação:</b> Mestre em Economia, Programa de Pós-Graduação em Economia - UFSC.
 								<br><b>Áreas de pesquisa:</b> Macroeconomia, Econometria e Finanças
 								<br><b>E-mail:</b>igorcavaca@gmail.com
-								<br><b>Linkedin:</b><a href="https://www.linkedin.com/in/igorbastoscavaca/">www.linkedin.com/in/igorbastoscavaca/</a></p>
+								<br><b>Linkedin:</b><a href="https://www.linkedin.com/in/igorbastoscavaca/" target="_blank">www.linkedin.com/in/igorbastoscavaca/</a></p>
 							</div>
 						</section>
 						<hr>
@@ -98,7 +98,7 @@
 								<br><b>Formação:</b> Doutorado em Economia, Universität Passau, UNI/Passau, Alemanha.
 								<br><b>Áreas de pesquisa:</b> Economia regional, avaliação de políticas públicas, economia internacional, microeconometria, e inovação.
 								<br><b>E-mail:</b>philipp.ehrl@gmail.com
-								<br><b>Linkedin:</b><a href="https://sites.google.com/site/philippehrl/">sites.google.com/site/philippehrl</a></p>
+								<br><b>Linkedin:</b><a href="https://sites.google.com/site/philippehrl/" target="_blank">sites.google.com/site/philippehrl</a></p>
 							</div>
 						</section>
 						<hr>
