--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<!-- Início Apresentadores Eventos Anteriores -->
-					 <button onclick="myFunction()">Agosto/2021</button> <!-- botão Agosto 2021 -->
-          <div id="myDIV" style="display: none;"> <!-- botão Agosto 2021 -->
+					 <button onclick="myFunction4()">Agosto/2021</button> <!-- botão Agosto 2021 -->
+          <div id="myDIV4" style="display: none;"> <!-- botão Agosto 2021 -->
           
           					  <!-- Dados Apresentação Igor Cavaca -->
 					  
@@ -487,6 +487,16 @@
             }
           }
           </script> <!-- botão Setembro 2020 -->
+		<script> 
+          function myFunction4() {
+            var x = document.getElementById("myDIV4");
+            if (x.style.display === "none") {
+              x.style.display = "block";
+            } else {
+              x.style.display = "none";
+            }
+          }
+          </script> <!-- botão Setembro 2021 -->
 
 	</body>
 </html>
