--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+		<a href="https://www.qries.com/">
+        	 <img alt="Qries" src="https://www.qries.com/images/banner_logo.png"
+        	 width=150" height="70">
 
 		<!-- Header -->
 			<header id="header">
