--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PPGEco Seminários</title>
+		<title>PPGEco Seminários</title><meta property="og:site_name" content="San Roque 2014 Pollos"><meta property="og:title" content="San Roque 2014 Pollos" /><meta property="og:description" content="Programa de fiestas" /><meta property="og:image" itemprop="image" content="http://pollosweb.wesped.es/programa_pollos/play.png"><meta property="og:type" content="website" /><meta property="og:updated_time" content="1440432930" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
