--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 -->
 <html>
 	<head>
-		<title>PPGEco Seminários</title><meta property="og:site_name" content="San Roque 2014 Pollos"><meta property="og:title" content="San Roque 2014 Pollos" /><meta property="og:description" content="Programa de fiestas" /><meta property="og:image" itemprop="image" content="http://pollosweb.wesped.es/programa_pollos/play.png"><meta property="og:type" content="website" /><meta property="og:updated_time" content="1440432930" />
+		<title>PPGEco Seminários</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
+		<meta name="description" content="Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais" />
+		<meta property="og:type" content= "website" />
+		<meta property="og:url" content="https://seminariosppgeco.github.io/"/>
+		<meta property="og:site_name" content="PPGEco Seminários" />
+		<meta property="og:image" itemprop="image primaryImageOfPage" content="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon@2.png?v=73d79a89bded" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-		
+
 		<!-- Header -->
 			<header id="header">
-				
 				<a class="logo" href="index.html">PPGEco Seminários</a>
 				<nav>
 					<a href="#menu">Menu</a>
