--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:type" content= "website" />
 		<meta property="og:url" content="https://seminariosppgeco.github.io/"/>
 		<meta property="og:site_name" content="PPGEco Seminários" />
-		<meta property="og:image" content="https://raw.githubusercontent.com/seminariosppgeco/seminariosppgeco.github.io/main/images/logo_site_ppgeco.png" />
+		<meta property="og:image" itemprop="image primaryImageOfPage" content="https://raw.githubusercontent.com/seminariosppgeco/seminariosppgeco.github.io/main/images/logo_site_ppgeco.png" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
