--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<meta property="og:url" content="https://seminariosppgeco.github.io/"/>
 		<meta property="og:site_name" content="PPGEco Seminários" />
 		<meta property="og:image" itemprop="image primaryImageOfPage" content="https://raw.githubusercontent.com/seminariosppgeco/seminariosppgeco.github.io/main/images/logo_site_ppgeco.png" />
-		
-		<meta name="twitter:card" content="summary"/>
-        <meta name="twitter:domain" content="seminariosppgeco.github.io"/>
+		<meta name="twitter:card" content="summary_large_image"/>
+        <meta name="twitter:url" content="https://seminariosppgeco.github.io"/>
         <meta name="twitter:title" property="og:title" itemprop="name" content="Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais" />
         <meta name="twitter:description" property="og:description" itemprop="description" content="Programa de Pós-Graduação em Economia - Universidade Federal de Santa Catarina" />
+		<meta property="twitter:image" content="https://raw.githubusercontent.com/seminariosppgeco/seminariosppgeco.github.io/main/images/logo_site_ppgeco.png">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
