--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="content">
 								<img src="images/gen.jpg" alt="Trulli" width="150" height="138" style="float:left; padding-right: 10px;"/>
 								<h4><b><a href="https://seminariosppgeco.github.io/papers/Mendes_et_al.pdf" target="_blank">Duration Dependent Volatility Models with Value-weighted Approach <i class="icon fa-link">&nbsp;</i></a></b></h4>
-								<p><b>Autores:</b> Fernando Mendes, Douglas Turatti (Aalborg University) , João Mazzeu (Unicamp), João Caldeira (UFSC)
+								<p><b>Autores:</b> Fernando Henrique P. Mendes, Douglas Turatti (Aalborg University) , João Mazzeu (Unicamp), João Caldeira (UFSC)
                 <br><b>Data:</b> 24 de Setembro (Sexta-feira), 2021
                 <br><b>Horário:</b> 15:00hs
 								<p style="text-align:left;">
@@ -86,7 +86,7 @@
 								<br><b>Formação:</b> Doutorado em Economia pela Universidade Federal do Rio Grande do Sul, UFRGS, Brasil.
 								<br><b>Áreas de pesquisa:</b> Finanças
 								<br><b>E-mail:</b>fernandohpsm@hotmail.com
-								<br><b>Website:</b><a href="http://lattes.cnpq.br/9763654826243445" target="_blank">CV Lattes Fernando Mendes</a></p>
+								<br><b>Website:</b><a href="http://lattes.cnpq.br/9763654826243445" target="_blank">CV Lattes Fernando Henrique P. Mendes</a></p>
 							</div>
 						</section>
 						<hr>
