--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<div class="content">
 								<img src="images/portugal.jpg" alt="Trulli" width="150" height="138" style="float:left; padding-right: 10px;"/>
 								<h4><b><a href="https://seminariosppgeco.github.io/papers/Oliveira_Palma_Portugal.pdf" target="_blank">Estimating the Brazilian Output Gap in an MS-DSGE Approach<i class="icon fa-link">&nbsp;</i></a></b></h4>
-								<p><b>Autores:</b> Eleonora de Oliveira, Andreza Palma, Marcelo Portugal
+								<p><b>Autores:</b> Marcelo Portugal, Eleonora de Oliveira, Andreza Palma
                 <br><b>Data:</b> 22 de Outubro (Sexta-feira), 2021
                 <br><b>Horário:</b> 15:00hs
 								<p style="text-align:left;">
