--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
 				<div class="inner">
 					<!-- Início Apresentadores Eventos Próximos -->
 
-						<!-- Dados Apresentação Márcio Laurini -->
+						<!-- Dados Apresentação Sidney Martins Caetano -->
 					  
 						<section>
 							<div class="content">
-								<img src="images/gen.jpg" alt="Trulli" width="128" height="140" style="float:left; padding-right: 10px;"/>
-								<h4><b><a href="https://seminariosppgeco.github.io/papers/Valente_Laurini.pdf" target="_blank">The dynamics of fire activity in the Brazilian Pantanal<i class="icon fa-link">&nbsp;</i></a></b></h4>
-								<p><b>Autores:</b> Márcio Laurini e Fernanda Valente
-                <br><b>Data:</b> 19 de Novembro (Sexta-feira), 2021
-                <br><b>Horário:</b> 15:00hs
+								<img src="images/sidney.jpg" alt="Trulli" width="134" height="164" style="float:left; padding-right: 10px;"/>
+								<h4><b>Tendência e persistência da inflação</b></h4>
+								<p><b>Autor:</b> Sidney Martins Caetano
+               					 <br><b>Data:</b> 26 de Novembro (Sexta-feira), 2021
+               						 <br><b>Horário:</b> 15h
 								<p style="text-align:left;">
+									<br> <!-- break para ajustar título "Sobre o Apresentador" -->
 								<h4>Sobre o Apresentador</h4>
 								<p>Professor Associado
-									<br>Faculdade de Economia, Administração e Contabilidade de Ribeirão Preto (FEA-RP)
-									<br>Universidade de São Paulo (USP)
-								<br><b>Formação:</b> Doutor em Estatística pela Unicamp
-								<br><b>Áreas de pesquisa:</b> Econometria, Métodos Estatísticos e Computacionais em Finanças
-								<br><b>E-mail:</b>laurini@fearp.usp.br
-								<!-- <br><b>Website:</b><a href="http://www.brunowichmann.ca/" target="_blank">brunowichmann.ca</a></p> -->
+									<br>Universidade Federal de Juiz de Fora (UFJF-MG)
+								<br><b>Formação:</b> Doutor em Economia pela UFRGS
+								<br><b>Áreas de pesquisa:</b> Flutuações Cíclicas, Projeções Econômicas, Economia Monetária e Fiscal, Métodos e Modelos Matemáticos, Econométricos e Estatísticos. 
+								<br><b>E-mail:</b>sidney.caetano@ufjf.edu.br
+								<br><b>Website:</b><a href="http://www.sidneycaetano.com.br/" target="_blank">sidneycaetano.com.br/</a></p>
 							</div>
 						</section>
 						<hr>
@@ -109,7 +109,25 @@
 					<!-- Início Apresentadores Eventos Anteriores -->
 					 <button onclick="myFunction4()">2021</button> <!-- botão 2021 -->
           <div id="myDIV4" style="display: none;"> <!-- botão 2021 -->
-
+			<section>
+				<div class="content">
+					<img src="images/gen.jpg" alt="Trulli" width="128" height="140" style="float:left; padding-right: 10px;"/>
+					<h4><b><a href="https://seminariosppgeco.github.io/papers/Valente_Laurini.pdf" target="_blank">The dynamics of fire activity in the Brazilian Pantanal<i class="icon fa-link">&nbsp;</i></a></b></h4>
+					<p><b>Autores:</b> Márcio Laurini e Fernanda Valente
+	<br><b>Data:</b> 19 de Novembro (Sexta-feira), 2021
+	<br><b>Horário:</b> 15:00hs
+					<p style="text-align:left;">
+					<h4>Sobre o Apresentador</h4>
+					<p>Professor Associado
+						<br>Faculdade de Economia, Administração e Contabilidade de Ribeirão Preto (FEA-RP)
+						<br>Universidade de São Paulo (USP)
+					<br><b>Formação:</b> Doutor em Estatística pela Unicamp
+					<br><b>Áreas de pesquisa:</b> Econometria, Métodos Estatísticos e Computacionais em Finanças
+					<br><b>E-mail:</b>laurini@fearp.usp.br
+					<!-- <br><b>Website:</b><a href="http://www.brunowichmann.ca/" target="_blank">brunowichmann.ca</a></p> -->
+				</div>
+			</section>
+			<hr>
 			<!-- Dados Apresentação Bruno Wichmann -->
 					  
 			<section>
