--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="inner">
 					<div class="content">
 						<header>
-						  <p>Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  são realizados às Sextas-feiras (15:00hs), na sala SIGP 08 (Bloco A), onde se concentram as instalações do Programa.</p>
+						  <p>Os seminários do PPGEco apresentam artigos acadêmicos de pesquisadores do Programa e de outros centros brasileiros e internacionais. Geralmente,  são realizados às Sextas-feiras (15h), na sala SIGP 08 (Bloco A), onde se concentram as instalações do Programa.</p>
 						</header>
 					</div>
 				</div>
@@ -72,26 +72,27 @@
 				<div class="inner">
 					<!-- Início Apresentadores Eventos Próximos -->
 
-						<!-- Dados Apresentação Sidney Martins Caetano -->
+						<!-- Dados Apresentação André Portela -->
 					  
 						<section>
 							<div class="content">
-								<img src="images/sidney.jpg" alt="Trulli" width="134" height="164" style="float:left; padding-right: 10px;"/>
-								<h4><b>Tendência e persistência da inflação</b></h4>
-								<p><b>Autor:</b> Sidney Martins Caetano
-               					 <br><b>Data:</b> 26 de Novembro (Sexta-feira), 2021
+								<img src="images/andre_portela.jpg" alt="Trulli" width="147" height="169" style="float:left; padding-right: 10px;"/>
+								<h4><b><a href="https://seminariosppgeco.github.io/papers/Machine-Learning-and-Fund-Characteristics-Help-to-Select-Mutual-Funds-with-Positive-Alpha.pdf" target="_blank">Machine Learning and Fund Characteristics Help to Select Mutual Funds with Positive Alpha<i class="icon fa-link">&nbsp;</i></a></b></h4>
+								<p><b>Autores:</b>Victor DeMiguel, Javier Gil-Bazo, Francisco J. Nogales, André A. P. Santos
+               					 <br><b>Apresentador:</b> André A. P. Santos
+									<br><b>Data:</b> 27 de Maio (Sexta-feira), 2022
                						 <br><b>Horário:</b> 15h
 								<p style="text-align:left;">
-									<br> <!-- break para ajustar título "Sobre o Apresentador" -->
+
 								<h4>Sobre o Apresentador</h4>
-								<p>Professor Associado
-									<br>Universidade Federal de Juiz de Fora (UFJF-MG)
-								<br><b>Formação:</b> Doutor em Economia pela UFRGS
-								<br><b>Áreas de pesquisa:</b> Flutuações Cíclicas, Projeções Econômicas, Economia Monetária e Fiscal, Métodos e Modelos Matemáticos, Econométricos e Estatísticos. 
-								<br><b>E-mail:</b>sidney.caetano@ufjf.edu.br
-								<br><b>Website:</b><a href="http://www.sidneycaetano.com.br/" target="_blank">sidneycaetano.com.br/</a></p>
+									<br>Edinburgh Business School - University of Edinburgh; PPGEco - UFSC 
+								<br><b>Formação: </b>Doutor em Finanças Quantitativas pela Universidad Carlos III de Madrid
+								<br><b>Áreas de pesquisa: </b>Financial econometrics; Fixed income; Forecasting; Machine learning and heuristic methods. 
+								<br><b>E-mail: </b>andreportela@gmail.com
+								<br><b>Website: </b><a href="https://sites.google.com/site/andreportela" target="_blank">sites.google.com/site/andreportela</a></p>
 							</div>
 						</section>
+
 						<hr>
 						<!-- Final Apresentações próximos Eventos -->
 				</div>
@@ -103,19 +104,68 @@
 					<h2>Eventos Anteriores</h2>
 				</div>
 			</section>
-<!-- Início Eventos Anteriores -->
+			<!-- Início Eventos Anteriores -->
 			<section class="wrapper">
 				<div class="inner">
 					<!-- Início Apresentadores Eventos Anteriores -->
-					 <button onclick="myFunction4()">2021</button> <!-- botão 2021 -->
-          <div id="myDIV4" style="display: none;"> <!-- botão 2021 -->
+					 <button onclick="myFunction3()">2022</button> <!-- botão 2022 -->
+          			 <div id="myDIV3" style="display: none;"> <!-- botão 2022 -->
+			
+			<!-- Dados Apresentação Francis -->
+			
+			<section>
+				<div class="content">
+					<img src="images/gen.jpg" alt="Trulli" width="128" height="140" style="float:left; padding-right: 10px;"/>
+					<h4><b><a href="https://seminariosppgeco.github.io/papers/An_analysis_of_recidivism_by_gender_based_on_Brazilian_prison_microdata.pdf" target="_blank">An analysis of recidivism by gender based on Brazilian prison microdata<i class="icon fa-link">&nbsp;</i></a></b></h4>
+					<p><b>Autores:</b> Francis Petterini, Jennifer Gonçalves, Silvio Sallum
+					<br><b>Apresentadora:</b> Jennifer Gonçalves
+						<br><b>Data:</b> 20 de Maio (Sexta-feira), 2022
+							<br><b>Horário:</b> 15h
+					<p style="text-align:left;">
+					<h4>Sobre a Apresentadora</h4>
+					<br>Programa de Pós-Graduação em Economia
+					<br><b>Formação:</b> Doutoranda em Economia - PPGEco-UFSC
+					<br><b>Áreas de pesquisa: Microeconometria aplicada; Avaliação de políticas públicas; Economia Feminista.</b> 
+					<br><b>E-mail:</b>jeniffer-91@hotmail.com
+				</div>
+			</section>
+			
+			<hr>
+		</div> <!-- final botão 2022 -->
+
+					<button onclick="myFunction4()">2021</button> <!-- botão 2021 -->
+          			 <div id="myDIV4" style="display: none;"> <!-- botão 2021 -->
+			<!-- Dados Apresentação Sidney Martins Caetano -->
+			
+			<section>
+				<div class="content">
+					<img src="images/sidney.jpg" alt="Trulli" width="134" height="164" style="float:left; padding-right: 10px;"/>
+					<h4><b>Tendência e persistência da inflação</b></h4>
+					<p><b>Autor:</b> Sidney Martins Caetano
+						<br><b>Data:</b> 26 de Novembro (Sexta-feira), 2021
+							<br><b>Horário:</b> 15h
+					<p style="text-align:left;">
+						<br> <!-- break para ajustar título "Sobre o Apresentador" -->
+					<h4>Sobre o Apresentador</h4>
+					<p>Professor Associado
+						<br>Universidade Federal de Juiz de Fora (UFJF-MG)
+					<br><b>Formação:</b> Doutor em Economia pela UFRGS
+					<br><b>Áreas de pesquisa:</b> Flutuações Cíclicas, Projeções Econômicas, Economia Monetária e Fiscal, Métodos e Modelos Matemáticos, Econométricos e Estatísticos. 
+					<br><b>E-mail:</b>sidney.caetano@ufjf.edu.br
+					<br><b>Website:</b><a href="http://www.sidneycaetano.com.br/" target="_blank">sidneycaetano.com.br/</a></p>
+				</div>
+			</section>
+			
+			<hr>
+			<!-- Dados Apresentação Márcio Laurini -->
+			
 			<section>
 				<div class="content">
 					<img src="images/gen.jpg" alt="Trulli" width="128" height="140" style="float:left; padding-right: 10px;"/>
 					<h4><b><a href="https://seminariosppgeco.github.io/papers/Valente_Laurini.pdf" target="_blank">The dynamics of fire activity in the Brazilian Pantanal<i class="icon fa-link">&nbsp;</i></a></b></h4>
 					<p><b>Autores:</b> Márcio Laurini e Fernanda Valente
-	<br><b>Data:</b> 19 de Novembro (Sexta-feira), 2021
-	<br><b>Horário:</b> 15:00hs
+					<br><b>Data:</b> 19 de Novembro (Sexta-feira), 2021
+					<br><b>Horário:</b> 15:00hs
 					<p style="text-align:left;">
 					<h4>Sobre o Apresentador</h4>
 					<p>Professor Associado
@@ -362,7 +412,7 @@
 						
 						 <section>
 							<div class="content">
-								<img src="images/andre_portela.jpg" alt="Trulli" width="143" height="120" style="float:left; padding-right: 10px;"/>
+								<img src="images/andre_portela.jpg" alt="Trulli" width="147" height="169" style="float:left; padding-right: 10px;"/>
 								<h4><b>Semiparametric portfolio policies</b></h4>
 								<p><b>Autor:</b> André Alves Portela Santos
                 <br><b>Data:</b> 12 de Novembro, 2020
@@ -400,7 +450,6 @@
 								<br>Doutor em Economia pela Fundação Getúlio Vargas, São Paulo.<sup>[2]</sup>
 								<br><b>Áreas de pesquisa:</b> <sup>[1]</sup>Desenvolvimento econômico; Complexidade econômica; Desigualdade; Ciência das redes; Geografia econômica.
 								<br><sup>[2]</sup>Macroeconomia; Finanças; Economia Brasileira; Desenvolvimento econômico.
-								<br><b>E-mail:</b>andre.portela@ufsc.br
 								<br><b>Website:</b><a href="https://www.paulogala.com.br"> www.paulogala.com.br</a></p>
 							</div>
 						</section>
@@ -628,7 +677,7 @@
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; PPGEco Seminários 2021.
+						&copy; PPGEco Seminários 2022.
 					</div>
 				</div>
 			</footer>
@@ -661,7 +710,7 @@
               x.style.display = "none";
             }
           }
-          </script> <!-- botão Setembro 2020 -->
+          </script> <!-- botão 2022 -->
           <script> 
           function myFunction3() {
             var x = document.getElementById("myDIV3");
@@ -671,7 +720,7 @@
               x.style.display = "none";
             }
           }
-          </script> <!-- botão Setembro 2020 -->
+          </script> <!-- botão 2021 -->
 		<script> 
           function myFunction4() {
             var x = document.getElementById("myDIV4");
