--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 				<div class="content">
 					<img src="images/gen.jpg" alt="Trulli" width="128" height="140" style="float:left; padding-right: 10px;"/>
 					<h4><b><a href="https://seminariosppgeco.github.io/papers/An_analysis_of_recidivism_by_gender_based_on_Brazilian_prison_microdata.pdf" target="_blank">An analysis of recidivism by gender based on Brazilian prison microdata<i class="icon fa-link">&nbsp;</i></a></b></h4>
-					<p><b>Autores:</b> Francis Petterini, Jennifer Gonçalves, Silvio Sallum
-					<br><b>Apresentadora:</b> Jennifer Gonçalves
+					<p><b>Autores:</b> Francis Petterini, Jenniffer Gonçalves, Silvio Sallum
+					<br><b>Apresentadora:</b> Jenniffer Gonçalves
 						<br><b>Data:</b> 20 de Maio (Sexta-feira), 2022
 							<br><b>Horário:</b> 15h
 					<p style="text-align:left;">
