--- a/index.html
+++ b/index.html
@@ -76,20 +76,20 @@
 					  
 						<section>
 							<div class="content">
-								<img src="images/andre_portela.jpg" alt="Trulli" width="147" height="169" style="float:left; padding-right: 10px;"/>
-								<h4><b><a href="https://seminariosppgeco.github.io/papers/Machine-Learning-and-Fund-Characteristics-Help-to-Select-Mutual-Funds-with-Positive-Alpha.pdf" target="_blank">Machine Learning and Fund Characteristics Help to Select Mutual Funds with Positive Alpha<i class="icon fa-link">&nbsp;</i></a></b></h4>
-								<p><b>Autores:</b>Victor DeMiguel, Javier Gil-Bazo, Francisco J. Nogales, André A. P. Santos
-               					 <br><b>Apresentador:</b> André A. P. Santos
-									<br><b>Data:</b> 27 de Maio (Sexta-feira), 2022
+								<img src="images/paulo_victor.jpg" alt="Trulli" width="150" height="138" style="float:left; padding-right: 10px;"/>
+								<h4><b><a href="https://seminariosppgeco.github.io/papers/Strategic fiscal and monetary interactions in the Brazilian economy.pdf" target="_blank">Strategic fiscal and monetary interactions in the Brazilian economy<i class="icon fa-link">&nbsp;</i></a></b></h4>
+								<p><b>Autores:</b> Paulo Victor da Fonseca 
+               					 <br><b>Apresentador:</b> Paulo Victor da Fonseca
+									<br><b>Data:</b> 10 de Junho (Sexta-feira), 2022
                						 <br><b>Horário:</b> 15h
 								<p style="text-align:left;">
 
 								<h4>Sobre o Apresentador</h4>
-									<br>Edinburgh Business School - University of Edinburgh; PPGEco - UFSC 
-								<br><b>Formação: </b>Doutor em Finanças Quantitativas pela Universidad Carlos III de Madrid
-								<br><b>Áreas de pesquisa: </b>Financial econometrics; Fixed income; Forecasting; Machine learning and heuristic methods. 
-								<br><b>E-mail: </b>andreportela@gmail.com
-								<br><b>Website: </b><a href="https://sites.google.com/site/andreportela" target="_blank">sites.google.com/site/andreportela</a></p>
+									<br>Professor Substituto - ESAG, UDESC
+								<br><b>Formação: </b>Doutor em Economia, Programa de Pós-Graduação em Economia - UFSC 
+								<br><b>Áreas de pesquisa: </b>Macroeconomics; Fiscal policy and monetary policy and its interactions; Dynamic stochastic general equilibrium (DSGE) models; Heterogeneous agents New Keynesian models; Agent-based modeling
+								<br><b>E-mail: </b>paulovictordafonseca@gmail.com
+								<br><b>Website: </b><a href="https://sites.google.com/view/paulovfonseca/home" target="_blank">sites.google.com/view/paulovfonseca/home</a></p>
 							</div>
 						</section>
 
@@ -111,7 +111,38 @@
 					 <button onclick="myFunction3()">2022</button> <!-- botão 2022 -->
           			 <div id="myDIV3" style="display: none;"> <!-- botão 2022 -->
 			
-			<!-- Dados Apresentação Francis -->
+						<section class="wrapper">
+							<div class="inner">
+								<!-- Início Apresentadores Eventos Próximos -->
+			
+						<!-- Dados Apresentação André Portela -->
+						
+						<section>
+							<div class="content">
+								<img src="images/andre_portela.jpg" alt="Trulli" width="147" height="169" style="float:left; padding-right: 10px;"/>
+								<h4><b><a href="https://seminariosppgeco.github.io/papers/Machine-Learning-and-Fund-Characteristics-Help-to-Select-Mutual-Funds-with-Positive-Alpha.pdf" target="_blank">Machine Learning and Fund Characteristics Help to Select Mutual Funds with Positive Alpha<i class="icon fa-link">&nbsp;</i></a></b></h4>
+								<p><b>Autores:</b>Victor DeMiguel, Javier Gil-Bazo, Francisco J. Nogales, André A. P. Santos
+									<br><b>Apresentador:</b> André A. P. Santos
+									<br><b>Data:</b> 27 de Maio (Sexta-feira), 2022
+										<br><b>Horário:</b> 15h
+								<p style="text-align:left;">
+
+								<h4>Sobre o Apresentador</h4>
+									<br>Edinburgh Business School - University of Edinburgh; PPGEco - UFSC 
+								<br><b>Formação: </b>Doutor em Finanças Quantitativas pela Universidad Carlos III de Madrid
+								<br><b>Áreas de pesquisa: </b>Financial econometrics; Fixed income; Forecasting; Machine learning and heuristic methods. 
+								<br><b>E-mail: </b>andreportela@gmail.com
+								<br><b>Website: </b><a href="https://sites.google.com/site/andreportela" target="_blank">sites.google.com/site/andreportela</a></p>
+							</div>
+						</section>
+
+						<hr>
+						<!-- Final Apresentações próximos Eventos -->
+				</div>
+			</section>
+			
+
+			<!-- Dados Apresentação Jenniffer -->
 			
 			<section>
 				<div class="content">
