--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<p style="text-align:left;">
 
 								<h4>Sobre o Apresentador</h4>
-									<br>Analista de Pesquisa Quantitativa - Itaú Asset Management
+									<br>Cientista de dados - Itaú Asset Management
 								<br><b>Formação: </b>Doutor em Física - USP
 								<br><b>Áreas de pesquisa: </b>Sistemas Complexos e Física Estatística aplicados a Finanças; Sistemas Complexos em Fisiologia Vegetal; Dinâmica não linear e caótica com distribuição espacial e sua caracterização via uso do enfoque de Redes Complexa.
 								<br><b>E-mail: </b>antonio.ramos@itau-unibanco.com.br
